<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!--checkBox shows whether the user wants cream or not -->
    <string name="whipped_cream">Whipped cream ($1)</string>
    <!--Header text for the selection of quantity of coffees -->
    <string name="quantity">Quantity</string>
    <string name="minus" translatable="false">-</string>
    <!--shows the quantity of coffees in the on selection and in order summary -->
    <string name="number_of_coffees">1</string>
    <string name="plus" translatable="false">+</string>
    <!--Header text for the list of order summery [char limit=20]-->
    <string name="order_summary">Order Summary</string>
    <!--price message for the order summary [char limit= None]-->
    <string name="price">$0</string>
    <string name="order">order</string>
    <!--Header text for the list of toppings [char limit=20]-->
    <string name="toppings">Toppings</string>
    <!--checkBox shows whether the user wants chocolate or not -->
    <string name="chocolate_topping">Chocolate ($2)</string>
    <string name="name">Name</string>
    <!--Thank you message for the order summary [char limit= None]-->
    <string name="thankyou">Thank you!</string>
    <!--total for order summery [char limit=20]-->
    <string name="total">Total: </string>

    <!--
          Chocolate topping for the order summary. It will be shown in the format of
          "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
        -->
    <string name="addChocolate">Add chocolate? <xliff:g id="addChocolate">%b</xliff:g></string>

    <!--
      Whipped cream topping for the order summary. It will be shown in the format of
      "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
    -->
    <string name="addCream">Add whipped cream? <xliff:g id="addWhippedCream">%b</xliff:g></string>


    <!--
    Name for the order summary. it will be shown in the format of "Name: Noa" where Noa is the user's name [char limit= None]
    -->
    <string name="name_sum">Name: <xliff:g id="name" example="Noa">%s</xliff:g></string>
    <!--Toast less than 1 coffee-->
    <string name="cant1">You cannot have less than 1 coffee</string>
    <!--Toast more than 100 coffee-->
    <string name="cant100">You cannot have more than 100 coffees</string>
    <!--email subject-->
    <string name="email_subject">Just Java order for </string>
    <string name="one_cup_price">(One cup of coffee without toppings costs $5)</string>
</resources>
