<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee2"
    tools:context="com.example.android.justjava.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/coffee2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:textColor="#1A237E"
            android:textColorHint="#424242"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="#1A237E"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/one_cup_price"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:paddingEnd="24dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:paddingEnd="24dp"
            android:paddingLeft="24dp"
            android:paddingStart="24dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/chocolate_topping"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quantity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="#1A237E"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:text="@string/number_of_coffees"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="#1A237E"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>